[tool.poetry]
name = "geo-utils"
version = "0.1.0"
description = ""
authors = ["Edward Huh <edward_huh@brown.edu>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
geopandas = "^0.8.2"
us = "^2.0.2"
census = "^0.8.17"
smartystreets-python-sdk = "^4.7.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
pytest = "^6.2.1"
isort = "^5.7.0"
ipdb = "^0.13.4"
mypy = "^0.790"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,_,df,pc"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
geo-utils = "geo_utils.cli:cli"